--- a/public/login.html
+++ b/public/login.html
@@ -12,11 +12,8 @@
     <link rel="icon" href="assets/icon/favicon2.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
-
 <body>
-
     <!--Header-->
-
     <div class="header">
         <div class="container">
             <h1 class="titulo">AquaTech</h1>
@@ -38,9 +35,8 @@
         </div>
     </div>
 
-
+    <!--Login-->
     <div class="login">
-  
         <div class="container">
             <div class="card card-login">
                 <h2>Olá de volta!</h2>
@@ -51,11 +47,10 @@
                     </div>
                     <div class="campo">
                         <span>Senha:</span>
-                        <input id="senha_input" type="password" placeholder="******">
+                        <input id="senha_input" type="password" placeholder="****">
                     </div>
-                    <button class="botao">Entrar</button>
+                    <button class="btn_entrar">Entrar</button>
                 </div>
-
             </div>
         </div>
     </div>
@@ -67,8 +62,5 @@
             <span class="version">v1.0.0</span>
         </div>
     </div>
-    <!--footer fim-->
-
 </body>
-
 </html>
