--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -35,10 +35,9 @@
       </ul>
     </div>
   </div>
-  <!--header fim-->
 
+  <!--Cadastro-->
   <div class="login">
-
     <div class="container">
       <div class="card card-cadastro">
         <h2>Bem-vindo!</h2>
@@ -68,7 +67,6 @@
       </div>
     </div>
   </div>
-
   <!--footer inicio-->
   <div class="footer">
     <div class="container">
@@ -76,7 +74,7 @@
       <span class="version">v1.0.0</span>
     </div>
   </div>
-  <!--footer fim-->
+
 </body>
 
 </html>
